# 00android_apps

./: README.md
CameraUVC_Demo/: settings.gradle
CameraUVC_Demo/app/: build.gradle
CameraUVC_Demo/gradle/wrapper/: gradle-wrapper.properties
CanDemo/: settings.gradle
CanDemo/app/: build.gradle
CanDemo/app/src/main/cpp/: CMakeLists.txt
CanDemo/app/src/main/cpp/libcanutils-4.0.6/: CMakeLists.txt  GNUmakefile
CanDemo/app/src/main/cpp/libcanutils-4.0.6/include/: GNUmakefile  can_config.h  canutils.h
CanDemo/app/src/main/cpp/libcanutils-4.0.6/src/: GNUmakefile  canconfig.c  candump.c  canecho.c  cansend.c  cansequence.c  onload.cpp  onload.h  trace.h  zl_can_CanUtils.cpp
CanDemo/app/src/main/cpp/libsocketcan-0.0.10/: CMakeLists.txt  GNUmakefile.in  aclocal.m4  configure
CanDemo/app/src/main/cpp/libsocketcan-0.0.10/config/: GNUmakefile.in
CanDemo/app/src/main/cpp/libsocketcan-0.0.10/include/: GNUmakefile.in  libsocketcan_config.h  libsocketcan_config.h.in
CanDemo/app/src/main/cpp/libsocketcan-0.0.10/src/: GNUmakefile.in  libsocketcan.c
CanDemo/gradle/wrapper/: gradle-wrapper.properties
ContentProviderDemo/: settings.gradle
ContentProviderDemo/custContentProviderDemo/: build.gradle
ContentProviderDemo/gradle/wrapper/: gradle-wrapper.properties
ContentProviderDemo/readSmsDemo/: build.gradle  local.properties
ContentProviderDemo/readSysContactsDemo/: build.gradle
DualCamera/: settings.gradle
DualCamera/app/: build.gradle
Test_DualPlayback/: .gitignore  local.properties
Test_DualPlayback/app/: build.gradle
(+43 files in other folders)
